--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					
 					<div class="w3-header-top-right-text">
 						<h6 class="caption"> Contact Us</h6>
-						<p>(480) 838-6245</p>
+						<p><a href="tel:+14808386245">(480) 838-6245</a></p>
 					</div>
 					
 					<div class="email-right">
@@ -108,11 +108,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </div>
  <!--/banner-section-->
 <div class="about-3 bg-white">
-	<h3 class="heading-agileinfo">WELCOME<span> We Dedicated To Providing A Comfortable Environment For You To Relax.</span></h3>
-	<div class="container">
 
-
+	<div class="heading">
+		<h3 class="heading-agileinfo mb-0">WELCOME</h3>
+		<span class="text-sub-heading-black">We dedicated to providing a comfortable environment for you to relax.</span>
+		<div class="parent-line"><span class="line-black"></span></div>
 	</div>
+	
 	<div class="container">
 		<div class="d-flex">
 
@@ -129,7 +131,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<i class="fa fa-hand-o-right" aria-hidden="true"></i>
 				</a>
 			</div>
-			<div class="about2" style="background-image: url(images/home/nail-en-v-about.jpg);">
+			<div class="about2 margin-top" style="background-image: url(images/home/nail-en-v-about.jpg);">
 
 			</div>
 		</div>
@@ -262,5 +264,5 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </script> 
 <!-- //scrolling script -->
 
-</body>
+<script src='./scripts/components.js'></script></body>
 </html>
