--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					
 					<div class="w3-header-top-right-text">
 						<h6 class="caption"> Contact Us</h6>
-						<p>(480) 838-6245</p>
+						<p><a href="tel:+14808386245">(480) 838-6245</a></p>
 					</div>
 					
 					<div class="email-right">
@@ -108,12 +108,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </div>
 
  	<!-- /inner_content -->
-	<div class="banner-bottom bg-white">
+	<div class="banner-bottom bg-white pb-0">
 		<div class="container container-not-scroll">
-			<div class="inner_sec_info_agileits_w3">
-              <h3 class="heading-agileinfo mb-0">Contact Us<span>We dedicated to providing a comfortable environment for you to relax.</span></h3>
+			<div class="heading">
+				<h3 class="heading-agileinfo mb-0">Contact Us</h3>
+				<span class="text-sub-heading-black">We dedicated to providing a comfortable environment for you to relax.</span>
+				<div class="parent-line"><span class="line-black"></span></div>
 			</div>
-		
 
 		</div>
 	</div>
@@ -248,5 +249,5 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </script> 
 <!-- //scrolling script -->
 
-</body>
+<script src='./scripts/components.js'></script></body>
 </html>
