--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					
 					<div class="w3-header-top-right-text">
 						<h6 class="caption"> Contact Us</h6>
-						<p>(480) 838-6245</p>
+						<p><a href="tel:+14808386245">(480) 838-6245</a></p>
 					</div>
 					
 					<div class="email-right">
@@ -111,10 +111,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
  <!-- gallery -->
 	<div class="banner-bottom gallery bg-white">
 		<div class="container">
-			<h3 class="heading-agileinfo">Our Gallery<span>We dedicated to providing a comfortable environment for you to relax.</span></h3>
+			<div class="heading">
+				<h3 class="heading-agileinfo mb-0">Our Gallery</h3>
+				<span class="text-sub-heading-black">We dedicated to providing a comfortable environment for you to relax.</span>
+				<div class="parent-line"><span class="line-black"></span></div>
+			</div>
+
+
 			<!--start ----   gallery-->
 			<div class="w3ls_gallery_grids">
-				<div class="col-md-4 w3_agile_gallery_grid">
+				<div class="col-sm-4 w3_agile_gallery_grid">
 					<div class="agile_gallery_grid">
 						<a title="Nail EN-V " href="images/gallery/nail-en-v-gallery-01.jpg">
 							<div class="agile_gallery_grid1">
@@ -149,7 +155,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</a>
 					</div>
 				</div>
-				<div class="col-md-4 w3_agile_gallery_grid">
+				<div class="col-sm-4 w3_agile_gallery_grid">
 					<div class="agile_gallery_grid">
 						<a title="Nail EN-V " href="images/gallery/nail-en-v-gallery-04.jpg">
 							<div class="agile_gallery_grid1">
@@ -184,7 +190,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</a>
 					</div>
 				</div>
-				<div class="col-md-4 w3_agile_gallery_grid">
+				<div class="col-sm-4 w3_agile_gallery_grid">
 					<div class="agile_gallery_grid">
 						<a title="Nail EN-V " href="images/gallery/nail-en-v-gallery-07.jpg">
 							<div class="agile_gallery_grid1">
@@ -356,5 +362,5 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</script>
 <!-- //simpleLightbox -->
 
-</body>
+<script src='./scripts/components.js'></script></body>
 </html>
